MODINREACH-581: fix handling time-out errors for requests to inn-reach server