@@ -1,11 +1,14 @@
 package org.folio.innreach.domain.service.impl;
 
-import java.net.SocketTimeoutException;
+import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.folio.innreach.external.exception.InnReachConnectionException;
 import org.folio.innreach.external.exception.ServiceSuspendedException;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -40,14 +43,11 @@ public class RecordContributionServiceImpl implements RecordContributionService 
   private final ContributionExceptionListener exceptionListener;
 
   @Override
-  public void contributeInstance(UUID centralServerId, Instance instance) throws SocketTimeoutException{
+  public void contributeInstance(UUID centralServerId, Instance instance) {
     var bibId = instance.getHrid();
-
     log.info("contributeInstance: contributing bib {}", bibId);
 
     var bib = recordTransformationService.getBibInfo(centralServerId, instance);
-
-    log.info("contributeInstance: got bib info for bib: {}", bibId);
 
     contributeAndVerifyBib(centralServerId, bibId, bib);
 
@@ -63,14 +63,14 @@ public class RecordContributionServiceImpl implements RecordContributionService 
   }
 
   @Override
-  public void deContributeInstance(UUID centralServerId, Instance instance) throws SocketTimeoutException{
+  public void deContributeInstance(UUID centralServerId, Instance instance) {
     var bibId = instance.getHrid();
     log.info("De-contributing bib {}", bibId);
-    irContributionService.deContributeBib(centralServerId, bibId);
+    var response = irContributionService.deContributeBib(centralServerId, bibId);
+    verifyInnReachContributionResponse(response);
   }
 
   private void contributeAndVerifyBib(UUID centralServerId, String bibId, BibInfo bib) {
-    log.info("contributeAndVerifyBib: bib id {}", bibId);
     retryTemplate.execute(r -> contributeBib(centralServerId, bibId, bib));
     retryTemplate.execute(r -> verifyBibContribution(centralServerId, bibId));
     log.info("contributeAndVerifyBib: finished contribution of bib {}", bibId);
@@ -89,32 +89,22 @@ public class RecordContributionServiceImpl implements RecordContributionService 
   }
 
   @Override
-  public void moveItem(UUID centralServerId, String newBibId, Item item) throws SocketTimeoutException {
-    deContributeItem(centralServerId, item);
-    contributeItems(centralServerId, newBibId, List.of(item));
-  }
-
-  @Override
   public void deContributeItem(UUID centralServerId, Item item) {
     var itemId = item.getHrid();
     log.info("De-contributing item {}", itemId);
-    irContributionService.deContributeBibItem(centralServerId, itemId);
+    var response = irContributionService.deContributeBibItem(centralServerId, itemId);
+    verifyInnReachContributionResponse(response);
   }
 
   @Override
-  public int contributeItems(UUID centralServerId, String bibId, List<Item> items) throws SocketTimeoutException {
+  public int contributeItems(UUID centralServerId, String bibId, List<Item> items) {
     var bibItems = recordTransformationService.getBibItems(centralServerId, items, this::logItemTransformationError);
-
     int itemsCount = bibItems.size();
-
     Assert.isTrue(itemsCount != 0, "Failed to convert items for contribution");
-
-    log.info("Loaded {} items", itemsCount);
 
     retryTemplate.execute(r -> contributeBibItems(bibId, centralServerId, bibItems));
 
     log.info("Finished contributing items of bib {}", bibId);
-
     return itemsCount;
   }
 
@@ -133,45 +123,51 @@ public class RecordContributionServiceImpl implements RecordContributionService 
   }
 
   private InnReachResponse contributeBib(UUID centralServerId, String bibId, BibInfo bib) {
-    log.info("Retry happening for contributeBib with bibId: {}",bibId);
+    log.info("contributeBib:: contributing bib with id: [{}]", bibId);
     var response = irContributionService.contributeBib(centralServerId, bibId, bib);
-    checkServiceSuspension(response);
+    verifyInnReachContributionResponse(response);
     Assert.isTrue(response.isOk(), "Unexpected contribution response: " + response);
     return response;
   }
 
   private InnReachResponse verifyBibContribution(UUID centralServerId, String bibId) {
-    log.info("verifyBibContribution with bibId: {}",bibId);
     var response = irContributionService.lookUpBib(centralServerId, bibId);
-    checkServiceSuspension(response);
+    verifyInnReachContributionResponse(response);
     Assert.isTrue(response.isOk(), "Unexpected verification response: " + response);
     return response;
   }
 
   private InnReachResponse contributeBibItems(String bibId, UUID centralServerId, List<BibItem> bibItems) {
     var response = irContributionService.contributeBibItems(centralServerId, bibId, BibItemsInfo.of(bibItems));
-    checkServiceSuspension(response);
+    verifyInnReachContributionResponse(response);
     Assert.isTrue(response.isOk(), "Unexpected items contribution response: " + response);
     return response;
   }
 
-  private void checkServiceSuspension(InnReachResponse response) {
-    if (response != null && response.getErrors() != null && !response.getErrors().isEmpty()) {
-      InnReachResponse.Error errorResponse = response.getErrors().get(0);
+  private void verifyInnReachContributionResponse(InnReachResponse response) {
+    if (response != null && isNotEmpty(response.getErrors())) {
+      InnReachResponse.Error errorResponse = response.getErrors().getFirst();
 
-      var error = errorResponse!=null ? errorResponse.getReason() : "";
-      String errorMessages = "";
-
-      if (errorResponse!=null && errorResponse.getMessages()!=null && !errorResponse.getMessages().isEmpty()) {
-        errorMessages = errorResponse.getMessages().get(0);
+      var errorReason = Optional.ofNullable(errorResponse)
+        .map(InnReachResponse.Error::getReason)
+        .orElse("");
+      if (StringUtils.isNotBlank(errorReason)) {
+        log.warn("verifyInnReachContributionResponse:: error reason: {}", errorReason);
       }
-      log.info("checkServiceSuspension error: {}", error);
-      if (error.contains(CONTRIBUTION_IS_CURRENTLY_SUSPENDED)) {
-        log.info("Contribution to d2irm is currently suspended error message occurred");
+
+      if (errorReason.contains(CONTRIBUTION_IS_CURRENTLY_SUSPENDED)) {
+        log.warn("Contribution to d2irm is currently suspended error message occurred");
         throw new ServiceSuspendedException(CONTRIBUTION_IS_CURRENTLY_SUSPENDED);
       }
+
+      var errorMessages = Optional.ofNullable(errorResponse)
+        .map(InnReachResponse.Error::getMessages)
+        .filter(CollectionUtils::isNotEmpty)
+        .map(List::getFirst)
+        .orElse("");
+
       if (errorMessages.contains(CONNECTIONS_ALLOWED_FROM_THIS_SERVER)) {
-        log.info("Allowable maximum Connection limit error message occurred");
+        log.warn("Allowable maximum Connection limit error message occurred");
         throw new InnReachConnectionException("Only 5 connections allowed from this server");
       }
     }
